Lab 3 Products: add link to products list

--- a/Lab 3/products-react/src/pages/ProductDetails/ProductDetails.css
+++ b/Lab 3/products-react/src/pages/ProductDetails/ProductDetails.css
@@ -5,3 +5,13 @@
 .sub-img {
     max-height: 250px;
 }
+
+.prod-link {
+    text-decoration: none;
+    font-size: larger;
+    color: black;
+
+    &:hover {
+        color: gray;
+    }
+}
